# chatGPT-discord

./: .env.example  main.py  pyproject.toml
src/: server.py
