[tool.poetry]
name = "repl_nix_chatGPT-discord"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
revChatGPT = "^6.4.4"
selenium = "^4.10.0"
undetected-chromedriver = "^3.5.0"
asgiref = "^3.7.2"
discord = "^2.3.0"
openai = "^0.27.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
